alteracao email login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -53,7 +53,7 @@
             <div class="stacked-group-6En43k">
               <div class="a-text-fie-focus-copy-o5Lsx0">
                 <div class="placeholder-EHtP8X font-class-1">USUÁRIO</div>
-                <div class="placeholder-FXxIF6 font-class-1">joao@gmail.com</div>
+                <div class="placeholder-FXxIF6 font-class-1">breno@redigolo.com</div>
               </div>
               <div class="a-text-field-focus-o5Lsx0">
                 <div class="placeholder-eMYIHA font-class-2">******</div>
